semantico/y.output
Terminals unused in grammar

   TOK_FLECHA
   TOK_ERROR
   TOK_FOR
   TOK_SWITCH
   TOK_CASE
   TOK_DEFAULT
   TOK_FLOAT
   TOK_MALLOC
   TOK_CPRINTF
   TOK_FREE
   TOK_SET
   TOK_OF
   TOK_UNION
   TOK_INTERSECTION
   TOK_ADD
   TOK_CLEAR
   TOK_SIZE
   TOK_CONTAINS
   TOK_CONSTANTE_REAL


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones iniciar_codigo escribir_variables funciones inicio_main sentencias '}' escribir_fin
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 iniciar_codigo: %empty

    4 escribir_variables: %empty

    5 inicio_main: %empty

    6 escribir_fin: %empty

    7 declaraciones: declaracion declaraciones
    8              | declaracion

    9 declaracion: modificadores_acceso clase identificadores ';'
   10            | modificadores_acceso declaracion_clase ';'

   11 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
   12                     | TOK_SECRET TOK_UNIQUE
   13                     | TOK_EXPOSED TOK_UNIQUE
   14                     | TOK_HIDDEN
   15                     | TOK_SECRET
   16                     | TOK_EXPOSED
   17                     | TOK_UNIQUE
   18                     | %empty

   19 clase: clase_escalar
   20      | clase_vector
   21      | clase_objeto

   22 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   23                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   24 modificadores_clase: %empty

   25 clase_escalar: tipo

   26 tipo: TOK_INT
   27     | TOK_BOOLEAN

   28 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   29 clase_vector: TOK_ARRAY tipo '[' constante_entera ']'
   30             | TOK_ARRAY tipo '[' constante_entera ',' constante_entera ']'

   31 identificadores: identificador
   32                | identificador ',' identificadores

   33 funciones: funcion funciones
   34          | %empty

   35 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   36 tipo_retorno: TOK_NONE
   37             | tipo
   38             | clase_objeto

   39 parametros_funcion: parametro_funcion resto_parametros_funcion
   40                   | %empty

   41 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   42                         | %empty

   43 parametro_funcion: tipo TOK_IDENTIFICADOR
   44                  | clase_objeto TOK_IDENTIFICADOR

   45 declaraciones_funcion: declaraciones
   46                      | %empty

   47 sentencias: sentencia
   48           | sentencia sentencias

   49 sentencia: sentencia_simple ';'
   50          | bloque

   51 sentencia_simple: asignacion
   52                 | lectura
   53                 | escritura
   54                 | retorno_funcion
   55                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   56                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   57                 | destruir_objeto

   58 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   59 bloque: condicional
   60       | bucle

   61 asignacion: TOK_IDENTIFICADOR '=' exp
   62           | elemento_vector '=' exp
   63           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   64           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   65           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   66 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   67 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   68            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   69 bucle: TOK_WHILE exp '{' sentencias '}'

   70 lectura: TOK_SCANF TOK_IDENTIFICADOR
   71        | TOK_SCANF elemento_vector

   72 escritura: TOK_PRINTF exp

   73 retorno_funcion: TOK_RETURN exp
   74                | TOK_RETURN TOK_NONE

   75 exp: exp '+' exp
   76    | exp '-' exp
   77    | exp '/' exp
   78    | exp '*' exp
   79    | '-' exp
   80    | exp TOK_AND exp
   81    | exp TOK_OR exp
   82    | '!' exp
   83    | TOK_IDENTIFICADOR
   84    | constante
   85    | '(' exp ')'
   86    | '(' comparacion ')'
   87    | elemento_vector
   88    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   89    | identificador_clase TOK_IDENTIFICADOR '(' lista_expresiones ')'
   90    | identificador_clase TOK_IDENTIFICADOR

   91 identificador_clase: TOK_IDENTIFICADOR
   92                    | TOK_ITSELF

   93 lista_expresiones: exp resto_lista_expresiones
   94                  | %empty

   95 resto_lista_expresiones: ',' exp resto_lista_expresiones
   96                        | %empty

   97 comparacion: exp TOK_IGUAL exp
   98            | exp TOK_DISTINTO exp
   99            | exp TOK_MENORIGUAL exp
  100            | exp TOK_MAYORIGUAL exp
  101            | exp '<' exp
  102            | exp '>' exp

  103 constante: constante_logica
  104          | constante_entera

  105 constante_logica: TOK_TRUE
  106                 | TOK_FALSE

  107 constante_entera: TOK_CONSTANTE_ENTERA

  108 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 82
'(' (40) 35 55 56 63 64 67 68 85 86 88 89
')' (41) 35 55 56 63 64 67 68 85 86 88 89
'*' (42) 78
'+' (43) 75
',' (44) 30 32 95
'-' (45) 76 79
'.' (46) 55 65
'/' (47) 77
';' (59) 9 10 41 49
'<' (60) 101
'=' (61) 61 62 63 64 65
'>' (62) 102
'[' (91) 29 30 66
']' (93) 29 30 66
'{' (123) 1 2 22 23 28 35 67 68 69
'}' (125) 1 2 22 23 28 35 67 68 69
error (256)
TOK_IDENTIFICADOR (258) 22 23 28 35 43 44 55 56 58 61 63 64 65 66 70
    83 88 89 90 91 108
TOK_CONSTANTE_ENTERA (259) 107
TOK_NONE (260) 36 74
TOK_CLASS (261) 22 23
TOK_INHERITS (262) 22
TOK_INSTANCE_OF (263) 63 64
TOK_DISCARD (264) 58
TOK_ITSELF (265) 92
TOK_FLECHA (266)
TOK_HIDDEN (267) 11 14
TOK_SECRET (268) 12 15
TOK_EXPOSED (269) 13 16
TOK_UNIQUE (270) 11 12 13 17
TOK_FUNCTION (271) 35
TOK_RETURN (272) 73 74
TOK_MAIN (273) 1 2
TOK_INT (274) 26
TOK_BOOLEAN (275) 27
TOK_ARRAY (276) 29 30
TOK_IF (277) 67 68
TOK_ELSE (278) 68
TOK_WHILE (279) 69
TOK_SCANF (280) 70 71
TOK_PRINTF (281) 72
TOK_IGUAL (282) 97
TOK_DISTINTO (283) 98
TOK_MENORIGUAL (284) 99
TOK_MAYORIGUAL (285) 100
TOK_OR (286) 81
TOK_AND (287) 80
TOK_FALSE (288) 106
TOK_TRUE (289) 105
TOK_ERROR (290)
TOK_FOR (291)
TOK_SWITCH (292)
TOK_CASE (293)
TOK_DEFAULT (294)
TOK_FLOAT (295)
TOK_MALLOC (296)
TOK_CPRINTF (297)
TOK_FREE (298)
TOK_SET (299)
TOK_OF (300)
TOK_UNION (301)
TOK_INTERSECTION (302)
TOK_ADD (303)
TOK_CLEAR (304)
TOK_SIZE (305)
TOK_CONTAINS (306)
TOK_CONSTANTE_REAL (307)
NEG (308)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
programa (72)
    on left: 1 2, on right: 0
iniciar_codigo (73)
    on left: 3, on right: 1
escribir_variables (74)
    on left: 4, on right: 1
inicio_main (75)
    on left: 5, on right: 1
escribir_fin (76)
    on left: 6, on right: 1
declaraciones (77)
    on left: 7 8, on right: 1 7 22 23 45
declaracion (78)
    on left: 9 10, on right: 7 8
modificadores_acceso (79)
    on left: 11 12 13 14 15 16 17 18, on right: 9 10 35
clase (80)
    on left: 19 20 21, on right: 9
declaracion_clase (81)
    on left: 22 23, on right: 10
modificadores_clase (82)
    on left: 24, on right: 22 23
clase_escalar (83)
    on left: 25, on right: 19
tipo (84)
    on left: 26 27, on right: 25 29 30 37 43
clase_objeto (85)
    on left: 28, on right: 21 38 44
clase_vector (86)
    on left: 29 30, on right: 20
identificadores (87)
    on left: 31 32, on right: 9 22 32
funciones (88)
    on left: 33 34, on right: 1 2 22 23 33
funcion (89)
    on left: 35, on right: 33
tipo_retorno (90)
    on left: 36 37 38, on right: 35
parametros_funcion (91)
    on left: 39 40, on right: 35
resto_parametros_funcion (92)
    on left: 41 42, on right: 39 41
parametro_funcion (93)
    on left: 43 44, on right: 39 41
declaraciones_funcion (94)
    on left: 45 46, on right: 35
sentencias (95)
    on left: 47 48, on right: 1 2 35 48 67 68 69
sentencia (96)
    on left: 49 50, on right: 47 48
sentencia_simple (97)
    on left: 51 52 53 54 55 56 57, on right: 49
destruir_objeto (98)
    on left: 58, on right: 57
bloque (99)
    on left: 59 60, on right: 50
asignacion (100)
    on left: 61 62 63 64 65, on right: 51
elemento_vector (101)
    on left: 66, on right: 62 63 71 87
condicional (102)
    on left: 67 68, on right: 59
bucle (103)
    on left: 69, on right: 60
lectura (104)
    on left: 70 71, on right: 52
escritura (105)
    on left: 72, on right: 53
retorno_funcion (106)
    on left: 73 74, on right: 54
exp (107)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90, on right:
    61 62 65 66 67 68 69 72 73 75 76 77 78 79 80 81 82 85 93 95 97
    98 99 100 101 102
identificador_clase (108)
    on left: 91 92, on right: 55 65 89 90
lista_expresiones (109)
    on left: 93 94, on right: 55 56 63 64 88 89
resto_lista_expresiones (110)
    on left: 95 96, on right: 93 95
comparacion (111)
    on left: 97 98 99 100 101 102, on right: 86
constante (112)
    on left: 103 104, on right: 84
constante_logica (113)
    on left: 105 106, on right: 103
constante_entera (114)
    on left: 107, on right: 29 30 104
identificador (115)
    on left: 108, on right: 31 32


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . '{' declaraciones iniciar_codigo escribir_variables funciones inicio_main sentencias '}' escribir_fin
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN '{' . declaraciones iniciar_codigo escribir_variables funciones inicio_main sentencias '}' escribir_fin
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_HIDDEN    shift, and go to state 5
    TOK_SECRET    shift, and go to state 6
    TOK_EXPOSED   shift, and go to state 7
    TOK_UNIQUE    shift, and go to state 8
    TOK_FUNCTION  shift, and go to state 9

    TOK_CLASS    reduce using rule 18 (modificadores_acceso)
    TOK_INT      reduce using rule 18 (modificadores_acceso)
    TOK_BOOLEAN  reduce using rule 18 (modificadores_acceso)
    TOK_ARRAY    reduce using rule 18 (modificadores_acceso)
    '{'          reduce using rule 18 (modificadores_acceso)
    $default     reduce using rule 34 (funciones)

    declaraciones         go to state 10
    declaracion           go to state 11
    modificadores_acceso  go to state 12
    funciones             go to state 13
    funcion               go to state 14


State 4

    0 $accept: programa $end .

    $default  accept


State 5

   11 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   14                     | TOK_HIDDEN .

    TOK_UNIQUE  shift, and go to state 15

    $default  reduce using rule 14 (modificadores_acceso)


State 6

   12 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   15                     | TOK_SECRET .

    TOK_UNIQUE  shift, and go to state 16

    $default  reduce using rule 15 (modificadores_acceso)


State 7

   13 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   16                     | TOK_EXPOSED .

    TOK_UNIQUE  shift, and go to state 17

    $default  reduce using rule 16 (modificadores_acceso)


State 8

   17 modificadores_acceso: TOK_UNIQUE .

    $default  reduce using rule 17 (modificadores_acceso)


State 9

   35 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   shift, and go to state 5
    TOK_SECRET   shift, and go to state 6
    TOK_EXPOSED  shift, and go to state 7
    TOK_UNIQUE   shift, and go to state 8

    $default  reduce using rule 18 (modificadores_acceso)

    modificadores_acceso  go to state 18


State 10

    1 programa: TOK_MAIN '{' declaraciones . iniciar_codigo escribir_variables funciones inicio_main sentencias '}' escribir_fin

    $default  reduce using rule 3 (iniciar_codigo)

    iniciar_codigo  go to state 19


State 11

    7 declaraciones: declaracion . declaraciones
    8              | declaracion .

    TOK_HIDDEN   shift, and go to state 5
    TOK_SECRET   shift, and go to state 6
    TOK_EXPOSED  shift, and go to state 7
    TOK_UNIQUE   shift, and go to state 8

    TOK_CLASS    reduce using rule 18 (modificadores_acceso)
    TOK_INT      reduce using rule 18 (modificadores_acceso)
    TOK_BOOLEAN  reduce using rule 18 (modificadores_acceso)
    TOK_ARRAY    reduce using rule 18 (modificadores_acceso)
    '{'          reduce using rule 18 (modificadores_acceso)
    $default     reduce using rule 8 (declaraciones)

    declaraciones         go to state 20
    declaracion           go to state 11
    modificadores_acceso  go to state 12


State 12

    9 declaracion: modificadores_acceso . clase identificadores ';'
   10            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22
    TOK_ARRAY    shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 24 (modificadores_clase)

    clase                go to state 25
    declaracion_clase    go to state 26
    modificadores_clase  go to state 27
    clase_escalar        go to state 28
    tipo                 go to state 29
    clase_objeto         go to state 30
    clase_vector         go to state 31


State 13

    2 programa: TOK_MAIN '{' funciones . sentencias '}'

    TOK_IDENTIFICADOR  shift, and go to state 32
    TOK_DISCARD        shift, and go to state 33
    TOK_ITSELF         shift, and go to state 34
    TOK_RETURN         shift, and go to state 35
    TOK_IF             shift, and go to state 36
    TOK_WHILE          shift, and go to state 37
    TOK_SCANF          shift, and go to state 38
    TOK_PRINTF         shift, and go to state 39

    sentencias           go to state 40
    sentencia            go to state 41
    sentencia_simple     go to state 42
    destruir_objeto      go to state 43
    bloque               go to state 44
    asignacion           go to state 45
    elemento_vector      go to state 46
    condicional          go to state 47
    bucle                go to state 48
    lectura              go to state 49
    escritura            go to state 50
    retorno_funcion      go to state 51
    identificador_clase  go to state 52


State 14

   33 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 34 (funciones)

    funciones  go to state 53
    funcion    go to state 14


State 15

   11 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce using rule 11 (modificadores_acceso)


State 16

   12 modificadores_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce using rule 12 (modificadores_acceso)


State 17

   13 modificadores_acceso: TOK_EXPOSED TOK_UNIQUE .

    $default  reduce using rule 13 (modificadores_acceso)


State 18

   35 funcion: TOK_FUNCTION modificadores_acceso . tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_NONE     shift, and go to state 54
    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22
    '{'          shift, and go to state 24

    tipo          go to state 55
    clase_objeto  go to state 56
    tipo_retorno  go to state 57


State 19

    1 programa: TOK_MAIN '{' declaraciones iniciar_codigo . escribir_variables funciones inicio_main sentencias '}' escribir_fin

    $default  reduce using rule 4 (escribir_variables)

    escribir_variables  go to state 58


State 20

    7 declaraciones: declaracion declaraciones .

    $default  reduce using rule 7 (declaraciones)


State 21

   26 tipo: TOK_INT .

    $default  reduce using rule 26 (tipo)


State 22

   27 tipo: TOK_BOOLEAN .

    $default  reduce using rule 27 (tipo)


State 23

   29 clase_vector: TOK_ARRAY . tipo '[' constante_entera ']'
   30             | TOK_ARRAY . tipo '[' constante_entera ',' constante_entera ']'

    TOK_INT      shift, and go to state 21
    TOK_BOOLEAN  shift, and go to state 22

    tipo  go to state 59


State 24

   28 clase_objeto: '{' . TOK_IDENTIFICADOR '}'

    TOK_IDENTIFICADOR  shift, and go to state 60


State 25

    9 declaracion: modificadores_acceso clase . identificadores ';'

    TOK_IDENTIFICADOR  shift, and go to state 61

    identificadores  go to state 62
    identificador    go to state 63


State 26

   10 declaracion: modificadores_acceso declaracion_clase . ';'

    ';'  shift, and go to state 64


State 27

   22 declaracion_clase: modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   23                  | modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

    TOK_CLASS  shift, and go to state 65


State 28

   19 clase: clase_escalar .

    $default  reduce using rule 19 (clase)


State 29

   25 clase_escalar: tipo .

    $default  reduce using rule 25 (clase_escalar)


State 30

   21 clase: clase_objeto .

    $default  reduce using rule 21 (clase)


State 31

   20 clase: clase_vector .

    $default  reduce using rule 20 (clase)


State 32

   56 sentencia_simple: TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   61 asignacion: TOK_IDENTIFICADOR . '=' exp
   64           | TOK_IDENTIFICADOR . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   66 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   91 identificador_clase: TOK_IDENTIFICADOR .

    '['  shift, and go to state 66
    '('  shift, and go to state 67
    '='  shift, and go to state 68

    $default  reduce using rule 91 (identificador_clase)


State 33

   58 destruir_objeto: TOK_DISCARD . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 69


State 34

   92 identificador_clase: TOK_ITSELF .

    $default  reduce using rule 92 (identificador_clase)


State 35

   73 retorno_funcion: TOK_RETURN . exp
   74                | TOK_RETURN . TOK_NONE

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_NONE              shift, and go to state 72
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 79
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 36

   67 condicional: TOK_IF . '(' exp ')' '{' sentencias '}'
   68            | TOK_IF . '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '('  shift, and go to state 84


State 37

   69 bucle: TOK_WHILE . exp '{' sentencias '}'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 85
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 38

   70 lectura: TOK_SCANF . TOK_IDENTIFICADOR
   71        | TOK_SCANF . elemento_vector

    TOK_IDENTIFICADOR  shift, and go to state 86

    elemento_vector  go to state 87


State 39

   72 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 88
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 40

    2 programa: TOK_MAIN '{' funciones sentencias . '}'

    '}'  shift, and go to state 89


State 41

   47 sentencias: sentencia .
   48           | sentencia . sentencias

    TOK_IDENTIFICADOR  shift, and go to state 32
    TOK_DISCARD        shift, and go to state 33
    TOK_ITSELF         shift, and go to state 34
    TOK_RETURN         shift, and go to state 35
    TOK_IF             shift, and go to state 36
    TOK_WHILE          shift, and go to state 37
    TOK_SCANF          shift, and go to state 38
    TOK_PRINTF         shift, and go to state 39

    $default  reduce using rule 47 (sentencias)

    sentencias           go to state 90
    sentencia            go to state 41
    sentencia_simple     go to state 42
    destruir_objeto      go to state 43
    bloque               go to state 44
    asignacion           go to state 45
    elemento_vector      go to state 46
    condicional          go to state 47
    bucle                go to state 48
    lectura              go to state 49
    escritura            go to state 50
    retorno_funcion      go to state 51
    identificador_clase  go to state 52


State 42

   49 sentencia: sentencia_simple . ';'

    ';'  shift, and go to state 91


State 43

   57 sentencia_simple: destruir_objeto .

    $default  reduce using rule 57 (sentencia_simple)


State 44

   50 sentencia: bloque .

    $default  reduce using rule 50 (sentencia)


State 45

   51 sentencia_simple: asignacion .

    $default  reduce using rule 51 (sentencia_simple)


State 46

   62 asignacion: elemento_vector . '=' exp
   63           | elemento_vector . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'

    '='  shift, and go to state 92


State 47

   59 bloque: condicional .

    $default  reduce using rule 59 (bloque)


State 48

   60 bloque: bucle .

    $default  reduce using rule 60 (bloque)


State 49

   52 sentencia_simple: lectura .

    $default  reduce using rule 52 (sentencia_simple)


State 50

   53 sentencia_simple: escritura .

    $default  reduce using rule 53 (sentencia_simple)


State 51

   54 sentencia_simple: retorno_funcion .

    $default  reduce using rule 54 (sentencia_simple)


State 52

   55 sentencia_simple: identificador_clase . '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   65 asignacion: identificador_clase . '.' TOK_IDENTIFICADOR '=' exp

    '.'  shift, and go to state 93


State 53

   33 funciones: funcion funciones .

    $default  reduce using rule 33 (funciones)


State 54

   36 tipo_retorno: TOK_NONE .

    $default  reduce using rule 36 (tipo_retorno)


State 55

   37 tipo_retorno: tipo .

    $default  reduce using rule 37 (tipo_retorno)


State 56

   38 tipo_retorno: clase_objeto .

    $default  reduce using rule 38 (tipo_retorno)


State 57

   35 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno . TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_IDENTIFICADOR  shift, and go to state 94


State 58

    1 programa: TOK_MAIN '{' declaraciones iniciar_codigo escribir_variables . funciones inicio_main sentencias '}' escribir_fin

    TOK_FUNCTION  shift, and go to state 9

    $default  reduce using rule 34 (funciones)

    funciones  go to state 95
    funcion    go to state 14


State 59

   29 clase_vector: TOK_ARRAY tipo . '[' constante_entera ']'
   30             | TOK_ARRAY tipo . '[' constante_entera ',' constante_entera ']'

    '['  shift, and go to state 96


State 60

   28 clase_objeto: '{' TOK_IDENTIFICADOR . '}'

    '}'  shift, and go to state 97


State 61

  108 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 108 (identificador)


State 62

    9 declaracion: modificadores_acceso clase identificadores . ';'

    ';'  shift, and go to state 98


State 63

   31 identificadores: identificador .
   32                | identificador . ',' identificadores

    ','  shift, and go to state 99

    $default  reduce using rule 31 (identificadores)


State 64

   10 declaracion: modificadores_acceso declaracion_clase ';' .

    $default  reduce using rule 10 (declaracion)


State 65

   22 declaracion_clase: modificadores_clase TOK_CLASS . TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   23                  | modificadores_clase TOK_CLASS . TOK_IDENTIFICADOR '{' declaraciones funciones '}'

    TOK_IDENTIFICADOR  shift, and go to state 100


State 66

   66 elemento_vector: TOK_IDENTIFICADOR '[' . exp ']'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 101
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 67

   56 sentencia_simple: TOK_IDENTIFICADOR '(' . lista_expresiones ')'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    $default  reduce using rule 94 (lista_expresiones)

    elemento_vector      go to state 78
    exp                  go to state 102
    identificador_clase  go to state 80
    lista_expresiones    go to state 103
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 68

   61 asignacion: TOK_IDENTIFICADOR '=' . exp
   64           | TOK_IDENTIFICADOR '=' . TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_INSTANCE_OF       shift, and go to state 104
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 105
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 69

   58 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR .

    $default  reduce using rule 58 (destruir_objeto)


State 70

   66 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   83 exp: TOK_IDENTIFICADOR .
   88    | TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   91 identificador_clase: TOK_IDENTIFICADOR .

    '['  shift, and go to state 66
    '('  shift, and go to state 106

    TOK_IDENTIFICADOR  reduce using rule 91 (identificador_clase)
    $default           reduce using rule 83 (exp)


State 71

  107 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 107 (constante_entera)


State 72

   74 retorno_funcion: TOK_RETURN TOK_NONE .

    $default  reduce using rule 74 (retorno_funcion)


State 73

  106 constante_logica: TOK_FALSE .

    $default  reduce using rule 106 (constante_logica)


State 74

  105 constante_logica: TOK_TRUE .

    $default  reduce using rule 105 (constante_logica)


State 75

   79 exp: '-' . exp

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 107
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 76

   82 exp: '!' . exp

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 108
    identificador_clase  go to state 80
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 77

   85 exp: '(' . exp ')'
   86    | '(' . comparacion ')'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77

    elemento_vector      go to state 78
    exp                  go to state 109
    identificador_clase  go to state 80
    comparacion          go to state 110
    constante            go to state 81
    constante_logica     go to state 82
    constante_entera     go to state 83


State 78

   87 exp: elemento_vector .

    $default  reduce using rule 87 (exp)


State 79

   73 retorno_funcion: TOK_RETURN exp .
   75 exp: exp . '+' exp
   76    | exp . '-' exp
   77    | exp . '/' exp
   78    | exp . '*' exp
   80    | exp . TOK_AND exp
   81    | exp . TOK_OR exp

    TOK_OR   shift, and go to state 111
    TOK_AND  shift, and go to state 112
    '+'      shift, and go to state 113
    '-'      shift, and go to state 114
    '*'      shift, and go to state 115
    '/'      shift, and go to state 116

    $default  reduce using rule 73 (retorno_funcion)


State 80

   89 exp: identificador_clase . TOK_IDENTIFICADOR '(' lista_expresiones ')'
   90    | identificador_clase . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 117


State 81

   84 exp: constante .

    $default  reduce using rule 84 (exp)


State 82

  103 constante: constante_logica .

    $default  reduce using rule 103 (constante)


State 83

  104 constante: constante_entera .

    $default  reduce using rule 104 (constante)


State 84

   67 condicional: TOK_IF '(' . exp ')' '{' sentencias '}'
   68            | TOK_IF '(' . exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    TOK_IDENTIFICADOR     shift, and go to state 70
    TOK_CONSTANTE_ENTERA  shift, and go to state 71
    TOK_ITSELF            shift, and go to state 34
    TOK_FALSE             shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    '-'                   shift, and go to state 75
    '!'                   shift, and go to state 76
    '('                   shift, and go to state 77
